--- a/cart.org
+++ b/cart.org
@@ -238,7 +238,7 @@
         (format "[%s]" opts)
       opts))
 
-  (defun cart--top-search (string &optional bound noerror count)
+  (defun cart--top-search-forward (string &optional bound noerror count)
     "Search forward for STRING, ensuring point is on top level.
 
   Input parameter STRING is the same as given to `search-forward'.
@@ -247,6 +247,17 @@
     (let ((p0 (search-forward string bound noerror count)))
       (while (save-excursion (cart--tfm-skip (1- p0)))
         (setq p0 (search-forward string bound noerror count)))
+      p0))
+
+  (defun cart--top-search-backward (string &optional bound noerror count)
+    "Search backward for STRING, ensuring point is on top level.
+
+  Input parameter STRING is the same as given to `search-forward'.
+  Optional parameters BOUND, NOERROR, and COUNT are also identical to
+  that in `search-forward'."
+    (let ((p0 (search-backward string bound noerror count)))
+      (while (save-excursion (cart--tfm-skip (1- p0)))
+        (setq p0 (search-backward string bound noerror count)))
       p0))
 #+end_src
 *** Point Insertion
@@ -398,7 +409,9 @@
 
   Code originally from this stackoverflow answer:
   https://emacs.stackexchange.com/a/10405"
+    (LaTeX-narrow-to-environment)
     (let ((ppss (syntax-ppss (or pos (point)))))
+      (widen)
       (when (nth 1 ppss) (char-after (nth 1 ppss)))))
 
   (defun cart--tfm-skip (&optional pos)
@@ -481,24 +494,25 @@
   instead, just clicks, a prompt is launched asking the user to click on
   trget point."
     (interactive)
-    (let* ((xys (cart--gmp "Click & drag from start point to end point")))
-      (when (numberp (elt xys 0))
-        (setq xys (list xys (cart--gmp
-                             "You had only clicked on one point. Please click target point now"))))
+    (save-excursion
+      (let* ((xys (cart--gmp "Click & drag from start point to end point")))
+        (when (numberp (elt xys 0))
+          (setq xys (list xys (cart--gmp
+                               "You had only clicked on one point. Please click target point now"))))
 
-      (let ((dxdy (cart--vecop '- (elt xys 1) (elt xys 0))))
-        (if (region-active-p)
-            (narrow-to-region (region-beginning) (region-end))
-          (narrow-to-region (cart--goto-begend) (cart--goto-begend t)))
+        (let ((dxdy (cart--vecop '- (elt xys 1) (elt xys 0))))
+          (if (region-active-p)
+              (narrow-to-region (region-beginning) (region-end))
+            (narrow-to-region (cart--goto-begend) (cart--goto-begend t)))
 
-        (cart--translate dxdy)
-        (goto-char (point-min))
-        (while (not (eobp))
-          (move-end-of-line nil)
+          (cart--translate dxdy)
+          (goto-char (point-min))
+          (while (not (eobp))
+            (move-end-of-line nil)
+            (do-auto-fill)
+            (forward-line))
           (do-auto-fill)
-          (forward-line))
-        (do-auto-fill)
-        (widen))))
+          (widen)))))
 #+end_src
 *** Rotation
 #+begin_src emacs-lisp :tangle yes
@@ -573,28 +587,29 @@
   sum with THT.  If options are present for a node, and no rotate field
   exists, it is inserted."
     (interactive)
-    (let* ((xyref (or (cart--gmp "Click on the center of rotation (RET to use origin) ") '(0 0)))
-           (xys (cart--gmp "Click and drag the rotation target points "))
-           (rnds (y-or-n-p "Rotate Node contents too?")))
-      (when (numberp (elt xys 0))
-        (setq xys (list xys (cart--gmp
-                             "You had only clicked on one point. Please click target point now"))))
+    (save-excursion
+      (let* ((xyref (or (cart--gmp "Click on the center of rotation (RET to use origin) ") '(0 0)))
+             (xys (cart--gmp "Click and drag the rotation target points "))
+             (rnds (y-or-n-p "Rotate Node contents too?")))
+        (when (numberp (elt xys 0))
+          (setq xys (list xys (cart--gmp
+                               "You had only clicked on one point. Please click target point now"))))
 
-      (setq xys (mapcar (lambda (xy) (cart--vecop '- xy xyref)) xys))
+        (setq xys (mapcar (lambda (xy) (cart--vecop '- xy xyref)) xys))
 
-      (let ((theta (cart--angle (elt xys 0) (elt xys 1))))
-        (if (region-active-p)
-            (narrow-to-region (region-beginning) (region-end))
-          (narrow-to-region (cart--goto-begend) (cart--goto-begend t)))
+        (let ((theta (cart--angle (elt xys 0) (elt xys 1))))
+          (if (region-active-p)
+              (narrow-to-region (region-beginning) (region-end))
+            (narrow-to-region (cart--goto-begend) (cart--goto-begend t)))
 
-        (cart--rotate theta xyref rnds)
-        (goto-char (point-min))
-        (while (not (eobp))
-          (move-end-of-line nil)
+          (cart--rotate theta xyref rnds)
+          (goto-char (point-min))
+          (while (not (eobp))
+            (move-end-of-line nil)
+            (do-auto-fill)
+            (forward-line))
           (do-auto-fill)
-          (forward-line))
-        (do-auto-fill)
-        (widen))))
+          (widen)))))
 #+end_src
 *** Scaling
 #+begin_src emacs-lisp :tangle yes
@@ -663,27 +678,28 @@
   product with SC.  If options are present for a node, and no scale field
   exists, it is inserted."
     (interactive)
-    (let* ((xyref (or (cart--gmp "Click on the center of scaling (RET to use origin) ") '(0 0)))
-           (xys (cart--gmp "Click and drag the scaling target points "))
-           (snds (y-or-n-p "Scale Node contents too?")))
-      (when (numberp (elt xys 0))
-        (setq xys (list xys (cart--gmp
-                             "You had only clicked on one point. Please click target point now"))))
-      (setq xys (mapcar (lambda (xy) (cart--vecop '- xy xyref)) xys)) ;; Relative Coordinates
+    (save-excursion
+      (let* ((xyref (or (cart--gmp "Click on the center of scaling (RET to use origin) ") '(0 0)))
+             (xys (cart--gmp "Click and drag the scaling target points "))
+             (snds (y-or-n-p "Scale Node contents too?")))
+        (when (numberp (elt xys 0))
+          (setq xys (list xys (cart--gmp
+                               "You had only clicked on one point. Please click target point now"))))
+        (setq xys (mapcar (lambda (xy) (cart--vecop '- xy xyref)) xys)) ;; Relative Coordinates
 
-      (let ((sc (apply '/ (reverse (mapcar 'cart--norm xys)))))
-        (if (region-active-p)
-            (narrow-to-region (region-beginning) (region-end))
-          (narrow-to-region (cart--goto-begend) (cart--goto-begend t)))
+        (let ((sc (apply '/ (reverse (mapcar 'cart--norm xys)))))
+          (if (region-active-p)
+              (narrow-to-region (region-beginning) (region-end))
+            (narrow-to-region (cart--goto-begend) (cart--goto-begend t)))
 
-        (cart--scale sc xyref snds)
-        (goto-char (point-min))
-        (while (not (eobp))
-          (move-end-of-line nil)
+          (cart--scale sc xyref snds)
+          (goto-char (point-min))
+          (while (not (eobp))
+            (move-end-of-line nil)
+            (do-auto-fill)
+            (forward-line))
           (do-auto-fill)
-          (forward-line))
-        (do-auto-fill)
-        (widen))))
+          (widen)))))
 #+end_src
 ** Wrapper functions for editing a selected point in a diagram
 *** Move point
@@ -737,7 +753,7 @@
               (search-forward ")"))))
 
         (goto-char (1+ pt))
-        (delete-region (point) (cart--top-search "("))
+        (delete-region (point) (cart--top-search-forward "("))
 
         (widen))))
 #+end_src
