cart-tikz-draw now closes smoothly when dragged in the end!

--- a/cart.org
+++ b/cart.org
@@ -312,16 +312,18 @@
                             " .. controls " (cart--fmt-point (elt xys 1))))
             (setq ctflag t)) )
         (unless ctflag (insert " -- ")))
-      (when ctflag (insert " .. "))
       (if (y-or-n-p "Insert first point in the end (manual closed path)?")
           (progn
             (cart--goto-begend)
-            (search-forward "(")
-            (while (cart--last-open-paren (1- (point)))
-              (search-forward "("))
-            (let ((pt1 (buffer-substring (point) (save-excursion (search-forward ")")))))
-              (move-end-of-line nil)
-              (insert (format "%s" pt1))))
+            (cart--top-search-forward "(")
+            (let ((pt1 (cart--read-cds)))
+              (if (not ctflag)
+                  (progn (move-end-of-line nil) (insert (cart--fmt-point pt1)))
+                (cart--top-search-forward "(")
+                (setq pt1 (list pt1 (cart--vecop '- pt1 (cart--vecop '- (cart--read-cds) pt1))))
+                (move-end-of-line nil)
+                (insert (concat " and " (cart--fmt-point (elt pt1 1)) " .. "
+                                (cart--fmt-point (elt pt1 0)))))))
         (if ctflag
             (delete-char (- (point) (search-backward " .. controls")))
           (delete-char (- (point) (search-backward " --")))))
